syntax = "proto3";

package paymentmethodvalidation;

option go_package = "./paymentmethodvalidation";

message PaymentMethodValidationRequest {
  string userId  = 1;
  float amount = 2;
  string firstName = 3;
  string lastName = 4;
  string accountNumber = 5;
  string routingNumber = 6;
  string accountType = 7;
}

message PaymentMethodValidationResponse{
   string status = 1 ;  
   string validationResponse = 2;
}

service PaymentMethodValidationService {
    rpc ValidatePaymentMethod (PaymentMethodValidationRequest) returns (PaymentMethodValidationResponse);
}


